# aicspylibczi

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Example_Usage.ipynb  MANIFEST.in  README.md  codecov.yml  main.cpp  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: MacOSbacksupport.yml  Publish.yml  PublishLinux.md  PublishLinux.yml  build-docs.yml  cpp-build-main.yml  cpp-build-pr.yml  cppbuild-main.yml  cppbuild-master.yml  cppbuild.yml  py-build-main.yml  py-build-pr.yml  pythonbuild-main.yml  pythonbuild-master.yml  pythonbuild.yml  testandlint.yml
_aicspylibczi/: CSimpleStreamImplFromFd.cpp  CSimpleStreamImplFromFd.h  DimIndex.cpp  DimIndex.h  Image.cpp  Image.h  ImageFactory.cpp  ImageFactory.h  ImagesContainer.h  IndexMap.cpp  IndexMap.h  Reader.cpp  Reader.h  SourceRange.h  StreamImplLockingRead.cpp  StreamImplLockingRead.h  SubblockMetaVec.h  SubblockSortable.h  TargetRange.h  Threadpool.h  TypedImage.h  constants.cpp  constants.h  exceptions.cpp  exceptions.h  helper_algorithms.h  inc_libCZI.h  pb_bindings.cpp  pb_caster_BytesIO.h  pb_caster_DimIndex.h  pb_caster_ImageVector.h  pb_caster_ImagesContainer.h  pb_caster_SubblockMetaVec.h  pb_helpers.cpp  pb_helpers.h  pylibczi_ostream.cpp  pylibczi_ostream.h
_pylibczi/: CSimpleStreamImplFromFd.cpp  CSimpleStreamImplFromFd.h  Image.cpp  Image.h  Image.inl  ImageFactory.cpp  ImageFactory.h  IndexMap.cpp  IndexMap.h  Iterator.h  Reader.cpp  Reader.h  SourceRange.h  SubblockMetaVec.h  SubblockSortable.h  SubblockSorter.h  TargetRange.h  TypedImage.h  _pylibczi.cpp  aics_added.cpp  aics_added.h  aics_added.hpp  constants.cpp  exceptions.cpp  exceptions.h  helper_algorithms.h  inc_libCZI.h  pb_bindings.cpp  pb_bindings_aics_added.cpp  pb_caster_BytesIO.h  pb_caster_ImageVector.h  pb_caster_SubblockMetaVec.h  pb_caster_libCZI_DimensionIndex.h  pb_helpers.cpp  pb_helpers.h  pylibczi_ostream.cpp  pylibczi_ostream.h  pylibczi_unistd.h
aicspylibczi/: CziFile.py  _version.py
aicspylibczi/tests/: test_czi_file.py
c_tests/: CMakeLists.txt  cTestHelpers.cpp  cTestHelpers.h  resources  test_Image.cpp  test_Iterator.cpp  test_Reader.cpp  test_main.cpp
c_tests/resources/: RGB-multichannel.czi  tiles.czi  tiles_time_z.czi  tiles_z.czi
docs/: CMakeLists.txt  Makefile  conf.py  conf.py.in  index.rst  installation.rst  make.bat  modules.rst  pylibczi.rst
pylibczi/: CziFile.py  CziScene.py  __init__.py  _version.py  exceptions.py  types.py
pylibczi/tests/: czi_scene_oldtests.py  test_czi_file.py
pylibczi/tests/resources/: RGB-8bit.czi
